[metadata]
name = MaCroDNA
version = 0.0.1
author = Mohammadamin Edrisi, Xiru Huang
author_email = mae6@rice.edu, xh29@rice.edu
description = Accurate integration of single-cell DNA and RNA data for a deeper understanding of tumor heterogeneity
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/xiru-huang/MaCroDNA
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src